# dockerizecppv2

./: .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt  main.cpp
